# mini-notebooklm-codex

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: files.py  health.py  knowledge_bases.py  system.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/repositories/: chunks.py  documents.py  jobs.py  knowledge_bases.py
backend/app/schemas/: api.py  chat_api.py  chunk.py  common.py  embedding_api.py  ir.py  mineru_api.py  qa.py  raw_mineru.py  rerank_api.py
backend/app/services/: bundle_parser.py  chat_client.py  chunking.py  document_review.py  dom_rebuilder.py  embedding_client.py  enrichment_service.py  file_manager_service.py  ingestion_service.py  mineru_client.py  qa_service.py  qdrant_ids.py  qdrant_manager.py  rerank_client.py  retrieval_service.py  stage3_pipeline.py  storage.py
backend/app/validators/: __init__.py  chunks.py  document_ir.py
backend/app/writers/: __init__.py  json_writer.py  jsonl_writer.py
backend/scripts/: stage2_mineru_smoke.py  stage3_index_smoke.py  stage4_qa_smoke.py  stage5_full_e2e.py
backend/tests/: test_bundle_parser.py  test_schema_contracts.py  test_stage3_pipeline.py  test_stage4_services.py
doc/: 09班李宇2022210347-本地ai知识库需求分析报告V7.md  MinerU to RAG Pipeline 架构设计与数据流方案.md  mineru API文档（格式化）.md  在线API输出文件格式（SaaS推断版）.md  当前实现与需求设计对照说明.md
doc/阿里云模型/: 文本生成-图像与视频理解.md
frontend/: index.html  package-lock.json  package.json
test_inputs/: sample.docx  sample.pptx
(+5 files in other folders)
